--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^9.6.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "postcss": "^7.0.17",
     "vant": "^2.0.2",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
@@ -23,6 +25,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "postcss-pxtorem": "^4.0.1",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
