--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^9.6.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "element-ui": "^2.11.1",
     "js-cookie": "^2.2.0",
     "postcss": "^7.0.17",
     "vant": "^2.0.2",
